tui/src/views/snapshots/toon_console_tui__views__network__tests__renders_a_validation_error_beside_its_field.snap
---
source: src/views/network.rs
expression: output
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
             ┌ Edit network profile ──────────────────────────────────────────────────┐             
             │Connector URL: https://connector.example/ilp▏                           │             
             │  the connector URL must use https://                                   │             
             │Relay URL: wss://relay.example                                          │             
             │Gateway domain: gw.example                                              │             
             │Gateway's connector URL: https://gateway.example/ilp                    │             
             │Gas station's connector URL: https://gas.example/ilp                    │             
             │Faucet URL: https://faucet.example                                      │             
             │EVM RPC URL: …                                                          │             
             │Solana RPC URL: …                                                       │             
             │ Save    Cancel                                                         │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             └────────────────────────────────────────────────────────────────────────┘
