tui/src/views/snapshots/toon_console_tui__views__network__tests__renders_an_edit_form_with_a_placeholder_and_an_override.snap
---
source: src/views/network.rs
expression: output
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
             ┌ Edit network profile ──────────────────────────────────────────────────┐             
             │Connector URL: https://connector.example/ilp▏                           │             
             │Relay URL: wss://relay.example                                          │             
             │Gateway domain: gw.example                                              │             
             │Gateway's connector URL: https://gateway.example/ilp                    │             
             │Gas station's connector URL: https://gas.example/ilp                    │             
             │Faucet URL: https://faucet.example                                      │             
             │EVM RPC URL: …                                                          │             
             │Solana RPC URL: …                                                       │             
             │ Save    Cancel                                                         │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             │                                                                        │             
             └────────────────────────────────────────────────────────────────────────┘
